--- a/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
@@ -386,12 +386,15 @@ The results from fitting the two-parameter version of the joint optimization pro
 		\hline
 		& \# $\lambda$ & Validation Err & Test Err& $\Gamma$ Rank & Num Solves\\
 		\hline
+		% rerunning with diff settings - cox: script_out/matrix_completion_groups_HC0_11.out
 		% script_out/matrix_completion_groups_HC0_11.txt
 		GD & 2 & 0.71 (0.037) &  0.71 (0.040) & 6.13 (0.38) & 6.67 \\
 		\hline
+		% need rerun
 		% bayes: script_out/matrix_completion_groups_NM0_11.txt
 		NM & 2 & 0.73 (0.038) & 0.73 (0.039) & 11.30 (0.90) & 100 \\
 		\hline
+		% need rerun
 		% bayes: script_out/matrix_completion_groups_SP0_11.txt
 		SP & 2 & 0.77 (0.037) & 0.77 (0.038) & 12.47 (2.88) & 100\\
 		\hline
@@ -399,14 +402,15 @@ The results from fitting the two-parameter version of the joint optimization pro
 		\hline
 		& \# $\lambda$ & Validation Err & Test Err&  $\Gamma$ Rank & Num Solves\\
 		\hline
-		% running on COX
+		% rerunning on bayes: script_out/matrix_completion_groups_HC0_9.out
 		% script_out/matrix_completion_groups_HC0_9.txt
 		GD & 2 & 0.37647 (0.01392) & 0.37712 (0.01267) & 8.17241 (0.47298) & 6.10345 (0.24061)\\
 		\hline
+		% need rerun
 		% bayes: script_out/matrix_completion_groups_NM0_9.txt
 		NM & 2 & 0.75 (0.045) & 0.78 (0.042) & 0.80 (0.18) & 100\\
 		\hline
-		% submitted to bayes
+		% need rerun
 		% bayes: script_out/matrix_completion_groups_SP0_9.txt
 		SP 2 & ?\\
 		\hline
