--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
@@ -953,6 +953,7 @@ We assessed the models by their test error. As seen in Table \ref{table:matrix_c
 		\hline
 		% rerunning on bayes: script_out/matrix_completion_groups_HC_9.out
 		% bayes: script_out/matrix_completion_groups_runs_HC_9.txt
+		% OOPS:; script_out/matrix_completion_groups_GS_12.out
 		GD & 45 & 0.375 (0.014) & 0.377 (0.013)&  8.38 (0.57) & 27.28 (1.34) \\
 		\hline
 		% rerunning on bayes: script_out/matrix_completion_groups_GS_9.out
