--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
@@ -934,7 +934,6 @@ We assessed the models by their test error. As seen in Table \ref{table:matrix_c
 		& \# $\lambda$ & Validation Err & Test Err& $\Gamma$ Rank & Num Solves\\
 		\hline
 		% bayes: script_out/matrix_completion_groups_HC_11.txt
-		% new running: script_out/matrix_completion_groups_HC_11.out
 		GD & 25 & 0.631 (0.035) & 0.677 (0.039) & 5.20 (0.27) & 11 (0.97) \\
 		\hline
 		% bayes: script_out/matrix_completion_groups_NM_11.txt
@@ -943,8 +942,7 @@ We assessed the models by their test error. As seen in Table \ref{table:matrix_c
 		% bayes: script_out/matrix_completion_groups_SP_11.txt
 		SP & 25 & 0.673 (0.034) & 0.757 (0.039) & 14.67 (2.84) & 100\\
 		\hline
-		% bayes: script_out/matrix_completion_groups_GS_11.txt
-		% new running: script_out/matrix_completion_groups_GS_11.out
+		% running: script_out/matrix_completion_groups_GS_11.out
 		GS & 2 & 0.74 (0.038) & 0.733 (0.039) & 8.90 (0.65) & 100\\
 		\hline
 		\multicolumn{6}{|c|}{N=100, G=22, n=8}\\
@@ -954,9 +952,10 @@ We assessed the models by their test error. As seen in Table \ref{table:matrix_c
 		% rerunning on bayes: script_out/matrix_completion_groups_HC_9.out
 		% bayes: script_out/matrix_completion_groups_runs_HC_9.txt
 		% OOPS:; script_out/matrix_completion_groups_GS_12.out
+		% OOPS:; script_out/matrix_completion_groups_HC_13.out
 		GD & 45 & 0.375 (0.014) & 0.377 (0.013)&  8.38 (0.57) & 27.28 (1.34) \\
 		\hline
-		% rerunning on bayes: script_out/matrix_completion_groups_GS_9.out
+		% rerunning on bayes: script_out/matrix_completion_groups_GS_13.out
 		% bayes: script_out/matrix_completion_groups_runs_GS_9.txt
 		GS & 2 & 0.409 (0.015) & 0.408 (0.013) & 13.7 (0.90) & 100\\
 		\hline
