update all pdf files and results

--- a/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
@@ -398,22 +398,22 @@ The results from fitting the two-parameter version of the joint optimization pro
 		% bayes: script_out/matrix_completion_groups_SP0_11.txt
 		SP & 2 & 0.77 (0.037) & 0.77 (0.038) & 12.47 (2.88) & 100\\
 		\hline
-		\multicolumn{6}{|c|}{N=100, G=22, n=8}\\
-		\hline
-		& \# $\lambda$ & Validation Err & Test Err&  $\Gamma$ Rank & Num Solves\\
-		\hline
-		% rerunning on bayes: script_out/matrix_completion_groups_HC0_9.out
-		% script_out/matrix_completion_groups_HC0_9.txt
-		GD & 2 & 0.37647 (0.01392) & 0.37712 (0.01267) & 8.17241 (0.47298) & 6.10345 (0.24061)\\
-		\hline
-		% need rerun
-		% bayes: script_out/matrix_completion_groups_NM0_9.txt
-		NM & 2 & 0.75 (0.045) & 0.78 (0.042) & 0.80 (0.18) & 100\\
-		\hline
-		% need rerun
-		% bayes: script_out/matrix_completion_groups_SP0_9.txt
-		SP 2 & ?\\
-		\hline
+%		\multicolumn{6}{|c|}{N=100, G=22, n=8}\\
+%		\hline
+%		& \# $\lambda$ & Validation Err & Test Err&  $\Gamma$ Rank & Num Solves\\
+%		\hline
+%		% rerunning on bayes: script_out/matrix_completion_groups_HC0_9.out
+%		% script_out/matrix_completion_groups_HC0_9.txt
+%		GD & 2 & 0.37647 (0.01392) & 0.37712 (0.01267) & 8.17241 (0.47298) & 6.10345 (0.24061)\\
+%		\hline
+%		% need rerun
+%		% bayes: script_out/matrix_completion_groups_NM0_9.txt
+%		NM & 2 & 0.75 (0.045) & 0.78 (0.042) & 0.80 (0.18) & 100\\
+%		\hline
+%		% need rerun
+%		% bayes: script_out/matrix_completion_groups_SP0_9.txt
+%		SP 2 & ?\\
+%		\hline
 	\end{tabular}
 \end{table}
 
