--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
@@ -911,54 +911,54 @@ GS & 2 & 8.28 (0.19) & 50.00 (2.16) & 57.14 (2.18) & 100 \\
 \end{table}
 
 \subsection{Low-Rank Matrix Completion}\label{sec:simulation_matrix}
-Two experiments were run where we varied the size of the matrix $N$, the number of observed entries, and the number of covariate groups $G$. The training set was composed of roughly $n$ entries for each column and row. The validation set was half the number of entries for each column and row.
+For this experiment, we considered a $60 \times 60$ matrix. The training set contained roughly two observed entries from each row and column and the validation set contained one per row and column. The row and column feature vectors contained 12 covariate groups each, where each group contained three covariates.
 
-The true coefficients are $\boldsymbol{\alpha}^{(g)} = g \boldsymbol{1}$ for $g = 1,...,4$ and $\boldsymbol{\beta}^{(g)} = g \boldsymbol{1}$ for $g = 1,2$. The rest of the coefficients were zero. The interaction matrix was rank one and set to be $\boldsymbol{u}\boldsymbol{v}^\top$ where $\boldsymbol{u}$ and $\boldsymbol{v}$ were sampled from a standard normal distribution. The predictors $\boldsymbol X$ and $\boldsymbol{Z}$ were sampled from a standard normal distribution and scaled so the $l_2$ norm of $\boldsymbol{X}\boldsymbol{\alpha}\boldsymbol{1}^\top + \boldsymbol{Z}\boldsymbol{\beta}\boldsymbol{1}^\top$ was the same as the $l_2$ norm of $\boldsymbol{\Gamma}$. \textcolor{red}{update settings}
+The true coefficients are $\boldsymbol{\alpha}^{(g)} = 2g \boldsymbol{1}$ for $g = 1,...,4$ and $\boldsymbol{\beta}^{(g)} = 2g \boldsymbol{1}$ for $g = 1,2$. The rest of the coefficients were zero. The interaction matrix was rank one and set to be $\boldsymbol{u}\boldsymbol{v}^\top$ where $\boldsymbol{u}$ and $\boldsymbol{v}$ were sampled from a standard normal distribution. The predictors $\boldsymbol X$ and $\boldsymbol{Z}$ were sampled from a standard normal distribution and scaled so the $l_2$ norm of $\boldsymbol{X}\boldsymbol{\alpha}\boldsymbol{1}^\top + \boldsymbol{Z}\boldsymbol{\beta}\boldsymbol{1}^\top$ was twice the $l_2$ norm of $\boldsymbol{\Gamma}$.
 The noise $\boldsymbol \epsilon$ was generated from a standard normal distribution and scaled such that the signal to noise ratio was 2. 
 
 %We decided to implement our own generalized gradient descent to minimize the training -- looks like we didn't mention what solvers we used for our problems, so i'll leave this out too.
 
 % We solved for the gradient of the validation loss using the specialized linear constraint least squares problem solver "LS" in CVXPY.
-\textcolor{red}{update settings}
-Grid search tuned the two-parameter version of \eqref{eq:matrix_comp_groups} where $\{\lambda_i\}_{i=1:2G}$ are pooled into a single $\lambda_1$. Grid search was performed over a $10 \times 10$ grid from 1$e$-3 to $1$. Gradient descent was initialized at $0.005 \times \boldsymbol 1$ and $0.003 \times \boldsymbol 1$. Nelder-Mead was initialized at the same points.
+Grid search tuned the two-parameter version of \eqref{eq:matrix_comp_groups} where $\{\lambda_i\}_{i=1:2G}$ are pooled into a single $\lambda_1$. Grid search was performed over a $10 \times 10$ grid from 1$e$-3.5 to $-1$. Gradient descent was initialized at $0.005 \times \boldsymbol 1$ and $0.003 \times \boldsymbol 1$. Nelder-Mead was initialized at the same points.
 
-We assessed the models by their test error. As seen in Table \ref{table:matrix_completion}, gradient descent had the lowest average test error in both experiments. Interestingly, gradient descent tended to select models with lower rank interaction matrices.
+We assessed the models by their test error. As seen in Table \ref{table:matrix_completion}, gradient descent had the lowest average test error in both experiments.
 
 \begin{table}
-	\caption{\label{table:matrix_completion} Matrix Completion. Standard errors are given in parentheses. We abbreviated the methods as follows: Gradient Descent = GD, Nelder-Mead = NM, Spearmint = SP, Grid Search = GS \textcolor{red}{update settings}}
+	\caption{\label{table:matrix_completion} Matrix Completion. Standard errors are given in parentheses. We abbreviated the methods as follows: Gradient Descent = GD, Nelder-Mead = NM, Spearmint = SP, Grid Search = GS}
 	\centering
 		\begin{tabular}{| l | l | l | l | l | l |}
-		\hline
-		\multicolumn{6}{|c|}{N=60, G=12, n=2}\\
+%		\hline
+%		\multicolumn{6}{|c|}{N=60, G=12, n=2}\\
 		\hline
 		& \# $\lambda$ & Validation Err & Test Err& $\Gamma$ Rank & Num Solves\\
 		\hline
-		% bayes: script_out/matrix_completion_groups_HC_11.txt
+		% bayes: script_out/matrix_completion_groups_HC_11_new.out
+		% TODO: please update me!!
 		GD & 25 & 0.631 (0.035) & 0.677 (0.039) & 5.20 (0.27) & 11 (0.97) \\
 		\hline
-		% bayes: script_out/matrix_completion_groups_NM_11.txt
-		NM & 25 & 0.784 (0.038) & 0.755 (0.038) & 18.47 (0.54) & 100 \\
+		% bayes: script_out/matrix_completion_groups_NM_11_new.txt
+		NM & 25 & 1.00 (0.043) & 0.97 (0.044) & 13.27 (0.52) & 100 \\
 		\hline
-		% bayes: script_out/matrix_completion_groups_SP_11.txt
+		% bayes: script_out/matrix_completion_groups_SP_11_new.txt
 		SP & 25 & 0.673 (0.034) & 0.757 (0.039) & 14.67 (2.84) & 100\\
 		\hline
-		% running: script_out/matrix_completion_groups_GS_11.out
-		GS & 2 & 0.74 (0.038) & 0.733 (0.039) & 8.90 (0.65) & 100\\
+		% running: script_out/matrix_completion_groups_GS_11_new.out
+		GS & 2 & 0.85 (0.043) & 0.85 (0.043) & 5.73 (0.63) & 100\\
 		\hline
-		\multicolumn{6}{|c|}{N=100, G=22, n=8}\\
-		\hline
-		& \# $\lambda$ & Validation Err & Test Err&  $\Gamma$ Rank & Num Solves\\
-		\hline
-		% rerunning on bayes: script_out/matrix_completion_groups_HC_9.out
-		% bayes: script_out/matrix_completion_groups_runs_HC_9.txt
-		% OOPS:; script_out/matrix_completion_groups_GS_12.out
-		% OOPS:; script_out/matrix_completion_groups_HC_13.out
-		GD & 45 & 0.375 (0.014) & 0.377 (0.013)&  8.38 (0.57) & 27.28 (1.34) \\
-		\hline
-		% rerunning on bayes: script_out/matrix_completion_groups_GS_13.out
-		% bayes: script_out/matrix_completion_groups_runs_GS_9.txt
-		GS & 2 & 0.409 (0.015) & 0.408 (0.013) & 13.7 (0.90) & 100\\
-		\hline
+%		\multicolumn{6}{|c|}{N=100, G=22, n=8}\\
+%		\hline
+%		& \# $\lambda$ & Validation Err & Test Err&  $\Gamma$ Rank & Num Solves\\
+%		\hline
+%		% rerunning on bayes: script_out/matrix_completion_groups_HC_9.out
+%		% bayes: script_out/matrix_completion_groups_runs_HC_9.txt
+%		% OOPS:; script_out/matrix_completion_groups_GS_12.out
+%		% OOPS:; script_out/matrix_completion_groups_HC_13.out
+%		GD & 45 & 0.375 (0.014) & 0.377 (0.013)&  8.38 (0.57) & 27.28 (1.34) \\
+%		\hline
+%		% rerunning on bayes: script_out/matrix_completion_groups_GS_13.out
+%		% bayes: script_out/matrix_completion_groups_runs_GS_9.txt
+%		GS & 2 & 0.409 (0.015) & 0.408 (0.013) & 13.7 (0.90) & 100\\
+%		\hline
 	\end{tabular}
 \end{table}
 
