update matrix completion paragraphs

--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
@@ -345,3 +345,34 @@
   school={PhD thesis, Stanford University}
 }
 
+@article{candes2012exact,
+  title={Exact matrix completion via convex optimization},
+  author={Candes, Emmanuel and Recht, Benjamin},
+  journal={Communications of the ACM},
+  volume={55},
+  number={6},
+  pages={111--119},
+  year={2012},
+  publisher={ACM}
+}
+
+@article{netflix,
+ title={Soft modelling by latent variables: the nonlinear iterative partial least
+squares (NIPALS) approach}, 
+ author={ACM SIGKDD and Netflix},
+ journal={Proceedings of KDD Cup and Workshop},
+ year={2007}
+}
+
+@article{candes2011robust,
+  title={Robust principal component analysis?},
+  author={Cand{\`e}s, Emmanuel J and Li, Xiaodong and Ma, Yi and Wright, John},
+  journal={Journal of the ACM (JACM)},
+  volume={58},
+  number={3},
+  pages={11},
+  year={2011},
+  publisher={ACM}
+}
+
+
