--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
@@ -619,7 +619,9 @@ The Hessian $\boldsymbol H(\boldsymbol \lambda)$ and the matrix $\boldsymbol C(\
 
 \subsubsection{Low-Rank Matrix Completion}\label{sec:matrix_completion}
 
-In this example, we move away from the simple regression framework and consider matrix-valued data with partially observed entries. The goal in matrix-completion problems is to reconstruct the rest of the matrix. There are many applications where such problems come up. In collaborative filtering problems, the goal is to infer user ratings on products given user ratings on a subset of the products \citet{netflix}. In robust principal components analysis, we decompose the observed matrix into a low-rank matrix and a sparse ``noise'' matrix \citet{candes2011robust}. A common assumption throughout these problems is that the matrix is low-rank. One method to find such matrices is to minimize their nuclear-norm $\|\cdot \|_*$ \citep{fazel2002matrix, srebro2004learning}, which is defined as the sum of the singular values.
+In this example, we move away from the simple regression framework and consider matrix-valued data with partially observed entries. The goal in matrix-completion problems is to reconstruct the rest of the matrix. There are many applications where such problems come up, including collaborative filtering \citet{netflix} and robust principle components analysis \citet{candes2011robust}. 
+%In collaborative filtering problems, the goal is to infer user ratings on products given user ratings on a subset of the products \citet{netflix}. In robust principal components analysis, we decompose the observed matrix into a low-rank matrix and a sparse ``noise'' matrix \citet{candes2011robust}. 
+These problems often try to find low-rank matrix representations by minimizing the nuclear norm $\|\cdot \|_*$ \citep{fazel2002matrix, srebro2004learning}. The nuclear norm is non-smooth since it is the $\ell_1$ norm of the singular values.
 
 In this example, we have a matrix-completion problem with additional information in the form of feature vectors for the rows and columns. We suppose that the matrix is the sum of row and column effects as well as an interaction matrix. Suppose the row and column effects are linear functions of the row and column feature vectors, respectively. \citep{fithian2013scalable} solves this problem with three penalty parameters -- one for the nuclear norm on the interaction matrix and one for each of the penalty functions on the row and column coefficients. Here we have row and column feature groups, and we would like to recover a sparse set of groups using group lasso penalties.
 
