--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
@@ -931,41 +931,22 @@ As seen in Table \ref{table:matrix_completion}, gradient descent had the lowest 
 	\caption{\label{table:matrix_completion} Matrix Completion. Standard errors are given in parentheses. We abbreviated the methods as follows: Gradient Descent = GD, Nelder-Mead = NM, Spearmint = SP, Grid Search = GS}
 	\centering
 		\begin{tabular}{| l | l | l | l | l | l | }
-%		\hline
-%		\multicolumn{6}{|c|}{N=60, G=12, n=2}\\
 		\hline
 		& \# $\lambda$ & Validation Err & Test Err & Num Solves\\
 		\hline
-		% TODO: RUNNING now: job 3935706
 		% bayes: script_out/matrix_completion_groups_HC_11_new1.txt
-		GD & 25 & ? \\
+		GD & 25 & 0.63 (0.04) & 0.67 (0.04) & 13.00 (0.86)\\
 		\hline
-		% TODO: RUNNING now: job 3935709
 		% bayes: script_out/matrix_completion_groups_NM_11_new1.txt
-		NM & 25 & ? & 100 \\
+		NM & 25 & 0.76 (0.04)) & 0.74 (0.04) & 100 \\
 		\hline
-		% TODO: RUNNING now: job 3935710
-		% bayes: script_out/matrix_completion_groups_SP_11_new1.txt
-		SP & 25 & ? & 100\\
+		% RUNNING
+		% bayes: script_out/matrix_completion_groups_SP_11_new.txt
+		SP & 25 & 0.65 (0.03) & 0.74 (0.04) & 100\\
 		\hline
-		% TODO: RUNNING now: job 3935707
 		% bayes: script_out/matrix_completion_groups_GS_11_new1.txt
-		GS & 2 & ? & 100\\
+		GS & 2 & 0.71 (0.04) & 0.72 (0.04) & 100\\
 		\hline
-%		\multicolumn{6}{|c|}{N=100, G=22, n=8}\\
-%		\hline
-%		& \# $\lambda$ & Validation Err & Test Err&  $\Gamma$ Rank & Num Solves\\
-%		\hline
-%		% rerunning on bayes: script_out/matrix_completion_groups_HC_9.out
-%		% bayes: script_out/matrix_completion_groups_runs_HC_9.txt
-%		% OOPS:; script_out/matrix_completion_groups_GS_12.out
-%		% OOPS:; script_out/matrix_completion_groups_HC_13.out
-%		GD & 45 & 0.375 (0.014) & 0.377 (0.013)&  8.38 (0.57) & 27.28 (1.34) \\
-%		\hline
-%		% rerunning on bayes: script_out/matrix_completion_groups_GS_13.out
-%		% bayes: script_out/matrix_completion_groups_runs_GS_9.txt
-%		GS & 2 & 0.409 (0.015) & 0.408 (0.013) & 13.7 (0.90) & 100\\
-%		\hline
 	\end{tabular}
 \end{table}
 
