--- a/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
@@ -380,40 +380,19 @@ The results from fitting the two-parameter version of the joint optimization pro
 \begin{table}
 	\caption{\label{table:two_param_matrix_completion} Matrix Completion fitted with two penalty parameters. Standard errors are given in parentheses. We abbreviated the methods as follows: Gradient Descent = GD, Nelder-Mead = NM, Spearmint = SP}
 	\centering
-	\begin{tabular}{| l | l | l | l | l | l |}
+	\begin{tabular}{| l | l | l | l | l |}
 		\hline
-		\multicolumn{6}{|c|}{N=60, G=12, n=2}\\
+		& \# $\lambda$ & Validation Err & Test Err &  Num Solves\\
 		\hline
-		& \# $\lambda$ & Validation Err & Test Err& $\Gamma$ Rank & Num Solves\\
+		% bayes: script_out/matrix_completion_groups_HC0_11_new2.txt
+		GD & 2 & 0.70 (0.04) &  0.71 (0.04) & 8.03 (0.79) \\
 		\hline
-		% rerunning with diff settings - cox: script_out/matrix_completion_groups_HC0_11.out
-		% script_out/matrix_completion_groups_HC0_11.txt
-		GD & 2 & 0.71 (0.037) &  0.71 (0.040) & 6.13 (0.38) & 6.67 \\
+		% bayes: script_out/matrix_completion_groups_NM0_11_new1.txt
+		NM & 2 & 0.71 (0.04) & 0.71 (0.04) & 100 \\
 		\hline
-		% need rerun
-		% bayes: script_out/matrix_completion_groups_NM0_11.txt
-		NM & 2 & 0.73 (0.038) & 0.73 (0.039) & 11.30 (0.90) & 100 \\
+		% bayes: script_out/matrix_completion_groups_SP0_11_new.txt
+		SP & 2 & 0.73 (0.04) & 0.74 (0.04) & 100\\
 		\hline
-		% need rerun
-		% bayes: script_out/matrix_completion_groups_SP0_11.txt
-		SP & 2 & 0.77 (0.037) & 0.77 (0.038) & 12.47 (2.88) & 100\\
-		\hline
-%		\multicolumn{6}{|c|}{N=100, G=22, n=8}\\
-%		\hline
-%		& \# $\lambda$ & Validation Err & Test Err&  $\Gamma$ Rank & Num Solves\\
-%		\hline
-%		% rerunning on bayes: script_out/matrix_completion_groups_HC0_9.out
-%		% script_out/matrix_completion_groups_HC0_9.txt
-%		GD & 2 & 0.37647 (0.01392) & 0.37712 (0.01267) & 8.17241 (0.47298) & 6.10345 (0.24061)\\
-%		\hline
-%		% need rerun
-%		% bayes: script_out/matrix_completion_groups_NM0_9.txt
-%		NM & 2 & 0.75 (0.045) & 0.78 (0.042) & 0.80 (0.18) & 100\\
-%		\hline
-%		% need rerun
-%		% bayes: script_out/matrix_completion_groups_SP0_9.txt
-%		SP 2 & ?\\
-%		\hline
 	\end{tabular}
 \end{table}
 
